# VolleyStats-Skills

./: README.md  ServingTracker.tsx  Tracker.tsx  debug_api.py  fix_index.py  index.html  index.tsx  metadata.json  netlify.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  serving_analysis.csv  serving_analytics.py  verification  vite.config.ts
.jules/: bolt.md
netlify/functions/: ultralytics.mts  ultralytics.ts
src/: AppShell.tsx
src/components/combine/: CombineApp.tsx  MidTNLeaderboard.tsx  ServingTracker.tsx  Tracker.tsx
src/components/dibs/: DibsApp.tsx
src/components/hub/: DashboardHub.tsx
src/components/planner/: PlannerPreview.tsx  Sidebar.tsx  StatCard.tsx
src/utils/: inference.ts  video.ts
src/verification/: verify_hub.py
utils/: bench_drawing.cjs  drawing.ts  inference.ts  math.ts  video.ts
verification/: debug_dashboard.py  debug_home.py  verify_app.py  verify_changes.py  verify_debug_selectors.py  verify_final.py  verify_final_robust.py  verify_inference_error.py  verify_load.py  verify_navigation.py  verify_navigation_click_debug.py  verify_navigation_debug.py  verify_navigation_fixed.py  verify_navigation_force.py  verify_navigation_success.py  verify_serving_canvas.py  verify_tracker.py
