[project]
name = "VolleySkillBoard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "onnxruntime>=1.22.0",        # For ONNX model inference
    "opencv-python>=4.12.0.88",   # For video frame processing
    "pandas>=2.3.1",              # For CSV output and data tracking
    "tqdm>=4.67.1",               # Progress bars
    "numpy>=1.26.0",              # Numerical processing
    "scikit-learn>=1.3.2"         # For optional clustering or heatmap smoothing
]
